Duplicate Quantity model for different use cases